feat/add_callback
* Add feature

* Tidy

* Metrics

* Refuc
